Add WebGL-noise Added config objects Initial structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Unknown Continents 2.0</title>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/combo?3.9.0/build/cssreset/reset-min.css">
+    <link rel="stylesheet" href="css/reset-min.css">
     <style>
         body{
             overflow: hidden;
