--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <canvas id="canvas" style="border: none;" width="800" height="800"></canvas>
+<script type="text/javascript" src="js/libs/dat.gui.js"></script>
 <script data-main="js/unknown-continents-2.0.js" type="text/javascript" src="js/libs/require.js"></script>
 </body>
 </html>
