--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-<canvas id="canvas" style="border: none;" width="800" height="800"></canvas>
+<canvas id="canvas" style="border: none;cursor: none;" width="800" height="800"></canvas>
 <script type="text/javascript" src="js/libs/dat.gui.js"></script>
 <script data-main="js/unknown-continents-2.0.js" type="text/javascript" src="js/libs/require.js"></script>
 </body>
